--- a/src/app/webviewer-main/study-table/study-table.component.html
+++ b/src/app/webviewer-main/study-table/study-table.component.html
@@ -7,8 +7,8 @@
 <section style="background-color: black;" class="worklist-study-list mat-elevation-z8">
     <table mat-table matSort [dataSource]="dataSource" #sort="matSort" class="mat-cell" aria-label="Elements">
         <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns; let idx=index">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header id="{{column}}">{{displayedTitle[idx]}}</th>
-            <td mat-cell *matCellDef="let row" [ngClass]="{'reviewedStatus': row.status === 'Reviewed'}">{{row[column]}}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header id="{{column}}"><nobr>{{displayedTitle[idx]}}</nobr></th>
+            <td mat-cell *matCellDef="let row" [ngClass]="{'reviewedStatus': row.status === 'Reviewed'}"><nobr>{{row[column]}}</nobr></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" ></tr>
