--- a/src/app/webviewer-main/webviewer-main.component.css
+++ b/src/app/webviewer-main/webviewer-main.component.css
@@ -2,55 +2,42 @@
     display: flex;
 }
 .study-list-container{
-    width: 56%;
+    width: 55%;
 }
 .report-container {
-    width: 44%;
+    width: 45%;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
 }
 .study-list-container, .report-container {
     margin-left: 1%;
     padding-right: 1%;
     /* border-right:1px solid red; */
 }
-
+/* .report-container .section-title {
+    position: fixed;
+    right: 33%;
+    top: 7%;
+} */
 .section-title{
-    padding-top: 8px;
-    font-size: 1.3rem;
+    display: inline-block;
+    margin-top: 8px;
+    font-size: 1.25rem;
     color: rgb(214, 212, 212);
 }
 
-/* .report_image{
+.report-image{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 5.5%;
-}
-img{
-    max-height: 78vh;
-    max-width: auto;
-} 
-
-.custom-btn {
-    cursor: pointer;
-    display: block;
-    -webkit-appearance: none !important;
-    border-radius: 0.125rem;
-    border: 1.2px solid rgb(126, 126, 126);
-    min-width: 3rem;
-    max-width: 10rem;
-    min-height: 1.9rem;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    letter-spacing: 0.073em;
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: 500;
-    background-color: transparent;
-    color: rgb(126, 126, 126);
-    float: right;
 }
 
-.btn-container{
-    padding: 1rem 5rem 0 0;
-} */
+@media (max-width: 1224px) {
+    .study-list-container{
+        width: 50%;
+    }
+    .report-container {
+        width: 50%;
+    }
+}
