--- a/src/app/webviewer-main/report-image-list/report-image-list.component.css
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.css
@@ -86,12 +86,13 @@ img{
 ::ng-deep snack-bar-container.custom-snackbar{
     display: flex;
     justify-content: center;
-    margin: 15px;
+    /* margin: 15px; */
     position: absolute;
-    right: 15%;
+    right: 12%;
     bottom: 0.1%;
-    min-width: fit-content;
-    padding: 14px 35px;
+    /* max-width: fix-content;
+    padding: 14px 0.5vw; */
+    align-items: center;
 }
 
 ::ng-deep .mat-simple-snackbar{
@@ -99,13 +100,21 @@ img{
 }
 
 @media (max-width: 1224px) {
-    /* .img-btn-container, .error-image{
+    .img-btn-container{
         max-height: 100%;
         max-width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
-    } */
+        padding-top: 10%
+    }
+    .error-image {
+        max-height: 100%;
+        max-width: 100%;
+        display: flex;
+        align-items: center;
+        padding-top: 12.6%;
+    }
     /* img{
         max-width: 100%;
         max-height: 100%;
@@ -119,5 +128,20 @@ img{
     }
     .custom-btn{
         min-height: 2.2vw;
+    }
+
+    ::ng-deep snack-bar-container.custom-snackbar{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* margin: 15px; */
+        position: absolute;
+        right: 8%;
+        bottom: 3%;
+        /* max-width: fix-content;
+        padding: 14px 0.5vw; */
+    }
+    ::ng-deep .mat-simple-snackbar{
+        font-size: 1.3vw;
     }
 }
