--- a/src/app/webviewer-main/header/header.component.html
+++ b/src/app/webviewer-main/header/header.component.html
@@ -25,7 +25,7 @@
                     <toolbar-users class="top-menu-tools-container"></toolbar-users>
                     <toolbar-settings class="top-menu-tools-container"></toolbar-settings>
                     <toolbar-about class="top-menu-tools-container"></toolbar-about>
-                    <toolbar-logout class="top-menu-tools-container"></toolbar-logout>
+                    <toolbar-logout class="top-menu-tools-container" (click)="showLogoutModal()"></toolbar-logout>
                 </div>
             </div>
         </div>
