--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -179,7 +179,7 @@
     min-width: 0.6rem; */
     height: 13px;
     width: 13px;
-    font-size: small
+    font-size: 0.85rem
 }
 
 .check-for-integrity-spinner-custom-error {
