--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body{
     /* font-size: 0.583333rem; */
     letter-spacing: normal;
     line-height: 1rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     margin-bottom: 0;
     font-family: 'Montserrat', sans-serif;
     margin-top: 0 !important;
