--- a/src/app/webviewer-main/study-table/study-table.component.html
+++ b/src/app/webviewer-main/study-table/study-table.component.html
@@ -5,13 +5,51 @@
 <!-- Study List -->
 <mat-paginator [pageSize]="40" [hidePageSize]="true"></mat-paginator>
 <section style="background-color: black;" class="worklist-study-list mat-elevation-z8">
-    <table mat-table matSort [dataSource]="dataSource" #sort="matSort" class="mat-cell" aria-label="Elements">
-        <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns; let idx=index">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header id="{{column}}"><nobr>{{displayedTitle[idx]}}</nobr></th>
-            <td mat-cell *matCellDef="let row" [ngClass]="{'reviewedStatus': row.status === 'Reviewed'}"><nobr>{{row[column]}}</nobr></td>
+    <table mat-table matSort [dataSource]="dataSource" class="mat-cell" aria-label="Elements" class="mat-elevation-z8">
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef id="status" mat-sort-header>Status</th>
+            <td mat-cell *matCellDef="let element">{{element.status}}</td>
+        </ng-container>
+        <ng-container matColumnDef="patient_id">
+            <th mat-header-cell *matHeaderCellDef id="patient_id" mat-sort-header>Patient ID</th>
+            <td mat-cell *matCellDef="let element">{{element.patient_id}}</td>
+        </ng-container>
+        <ng-container matColumnDef="patient_name">
+            <th mat-header-cell *matHeaderCellDef id="patient_name" mat-sort-header>Patient Name</th>
+            <td mat-cell *matCellDef="let element">{{element.patient.patient_name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="sex">
+            <th mat-header-cell *matHeaderCellDef id="sex" mat-sort-header>Sex</th>
+            <td mat-cell *matCellDef="let element">{{element.patient.patient_sex}}</td>
+        </ng-container>
+        <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef id="age" mat-sort-header>Age</th>
+            <td mat-cell *matCellDef="let element">{{element.patient.patient_age}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="study_date">
+            <th mat-header-cell *matHeaderCellDef id="patient_name" mat-sort-header>Study Date</th>
+            <td mat-cell *matCellDef="let element">{{element.study_date}}</td>
+        </ng-container>
+        <ng-container matColumnDef="analysis_date">
+            <th mat-header-cell *matHeaderCellDef id="patient_name" mat-sort-header>Analysis Date</th>
+            <td mat-cell *matCellDef="let element">{{element.analysis_date}}</td>
+        </ng-container>
+        <ng-container matColumnDef="results">
+            <th mat-header-cell *matHeaderCellDef id="results" mat-sort-header>Results</th>
+            <td mat-cell *matCellDef="let element">{{element.result}}</td>
+        </ng-container>
+        <ng-container matColumnDef="volumes">
+            <th mat-header-cell *matHeaderCellDef id="volumes" mat-sort-header>Volumes</th>
+            <td mat-cell *matCellDef="let element">{{element.volumes}}</td>
+        </ng-container>
+
+        <!-- <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns; let idx=index">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header id="{{column}}"><nobr>{{displayedTitle[idx]}}</nobr></th>
+            <td mat-cell *matCellDef="let row" [ngClass]="{'reviewedStatus': row.status === 'Reviewed'}"><nobr>{{row[column]}}</nobr></td>
+        </ng-container> -->
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" ></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="study-element-row" (dblclick)="clickRow.emit(row)" [ngClass]="getBackground(row)"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="study-element-row" (dblclick)="onDblclick(row)" [ngClass]="getBackground(row)"></tr>
     </table>
 </section>
